<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">占いアプリ</string>
    <string name="menu_settings">Settings</string>
    <string name="bg_description">BG</string>
    <string name="title_text">占いアプリ ver0.1</string>
    <string name="start_button_title">START!</string>
    <string name="do_button_title">占う!</string>
    <string name="please_input_text">誕生日を入力してください</string>
    <string name="result_text" >占っています・・・</string>
    <string name="result_template_text" >\n%1$d年%2$d月%3$d日生まれの\nあなたの今日の運勢\n\n全体運：\t%4$c%5$c%5$c%7$c%8$c\n恋愛運：\t%9$c%10$c%11$c%12$c%13$c\n金運：\t\t%14$c%15$c%16$c%17$c%18$c\n仕事運：\t%19$c%20$c%21$c%22$c%23$c\n</string>
    <string name="star_text">★</string>
    
</resources>